# sars

./: README.md  database.ini.sample  main.py  pyproject.toml
data/:  suitable_vacancies.json
src/: config.py  constants.py  currency_converters.py  db_manager.py  db_saver.py  errors.py  json_handlers.py  rates.py  salary.py  services__api.py  services_api.py  services_file.py  utils.py  vacancies.py
tests/: test_currency_converters.py  test_db_saver.py  test_json_handlers.py  test_salary.py  test_services_api.py  test_vacancies.py
